--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -3,137 +3,110 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fence Quote Calculator</title>
-  <link rel="canonical" href="https://homerepairs4u.com/quote-calculator/fencing.html">
+<title>Closeboard Featheredge Fence Calculator</title>
 <style>
-body {
-font-family: Arial, sans-serif;
-margin: 20px;
-max-width: 600px;
-}
-input[type="number"] {
-width: 100%;
-padding: 8px;
-font-size: 16px;
-margin: 5px 0 15px 0;
-box-sizing: border-box;
-}
-label {
-font-weight: bold;
-}
-button {
-padding: 10px 20px;
-font-size: 16px;
-}
-.result {
-margin-top: 20px;
-padding: 15px;
-border: 1px solid #ccc;
-background: #f9f9f9;
-}
+body { font-family: Arial, sans-serif; margin: 20px; }
+label { display: block; margin-top: 10px; }
+input, select { padding: 5px; margin-top: 5px; width: 100px; }
+.result { margin-top: 20px; padding: 10px; border: 1px solid #ccc; }
+.hidden { display: none; }
 </style>
 </head>
 <body>
 
-<h2>Fence Quote Calculator</h2>
+<h2>Closeboard Featheredge Fence Calculator</h2>
 
-<label for="length">Fence Length (m):</label>
-<input type="number" id="length" step="0.01" min="0" inputmode="decimal">
+<div>
+<label>Fence Length (m):
+<input type="number" id="length" value="10" min="0">
+</label>
 
-<label for="width">Fence Width (m):</label>
-<input type="number" id="width" step="0.01" min="0" inputmode="decimal">
-
-<label for="height">Fence Height (m, up to 1.8):</label>
-<input type="number" id="height" step="0.01" min="0" max="1.8" inputmode="decimal">
-
-<label>Gate required?</label><br>
-<select id="gateRequired">
-<option value="no">No</option>
-<option value="yes">Yes</option>
+<label>Height:
+<select id="height">
+<option value="4">4ft</option>
+<option value="5">5ft</option>
+<option value="6">6ft</option>
 </select>
+</label>
 
-<div id="gateInputs" style="display:none;">
-<label for="gateWidth">Gate Width (m):</label>
-<input type="number" id="gateWidth" step="0.01" min="0" inputmode="decimal">
+<label>Target Gross Margin (%):
+<input type="number" id="margin" value="30" min="0" max="100">
+</label>
 
-<label for="gateHeight">Gate Height (m):</label>
-<input type="number" id="gateHeight" step="0.01" min="0" inputmode="decimal">
-
-<label>Gate attached to fence?</label><br>
-<select id="gateAttached">
-<option value="no">No</option>
-<option value="yes">Yes</option>
-</select>
+<button onclick="calculateFence()">Calculate</button>
 </div>
 
-<button onclick="calculateQuote()">Calculate Quote</button>
-
-<div class="result" id="result"></div>
+<div class="result">
+<h3>Quote</h3>
+<p>Total Materials Cost: £<span id="materialCost">0</span></p>
+<p>Labour Cost: £<span id="labourCost">0</span></p>
+<p>Total Cost: £<span id="totalCost">0</span></p>
+<p>Selling Price: £<span id="sellingPrice">0</span></p>
+<p class="hidden">Internal Profit: £<span id="profit">0</span></p>
+<p class="hidden">Profit Margin: <span id="profitMargin">0</span>%</p>
+</div>
 
 <script>
-document.getElementById('gateRequired').addEventListener('change', function() {
-document.getElementById('gateInputs').style.display = this.value === 'yes' ? 'block' : 'none';
-});
+function calculateFence() {
+const length = parseFloat(document.getElementById('length').value);
+const height = document.getElementById('height').value;
+const margin = parseFloat(document.getElementById('margin').value) / 100;
 
-function calculateQuote() {
-// Inputs
-let length = parseFloat(document.getElementById('length').value) || 0;
-let width = parseFloat(document.getElementById('width').value) || 0;
-let height = parseFloat(document.getElementById('height').value) || 1.8;
-let totalFenceLength = length + width;
+// Constants
+const panelWidth = 1.8;
+const panelPrices = { '4': 22, '5': 27, '6': 32 };
+const gravelBoardPrice = 17;
+const postPrice = 17;
+const postMixBagPrice = 6;
+const postMixBagsPerPost = 2;
+const labourCostPerMeter = 50;
 
-let gateRequired = document.getElementById('gateRequired').value;
-let gateWidth = gateRequired === 'yes' ? parseFloat(document.getElementById('gateWidth').value) || 0 : 0;
-let gateAttached = gateRequired === 'yes' ? document.getElementById('gateAttached').value : 'no';
+// Calculate panels
+const panels = Math.ceil(length / panelWidth);
 
-// Adjust fence length if gate attached
-if (gateRequired === 'yes' && gateAttached === 'yes') {
-totalFenceLength -= gateWidth;
-}
+// Calculate posts
+const posts = panels + 1;
 
-// Fence pail calculation
-let pailWidth = 0.1; // 100mm = 0.1m
-let gap = 0.01; // 10mm = 0.01m
-let pailPlusGap = pailWidth + gap;
-let numPails = Math.ceil(totalFenceLength / pailPlusGap);
+// Gravel boards
+const gravelBoards = panels;
 
-// Pail cost based on height
-let pailCost = 1;
-if (height <= 0.9) pailCost = 1;
-else if (height <= 1.5) pailCost = 1.20;
-else if (height <= 1.8) pailCost = 1.40;
+// Post mix
+const postMixBags = posts * postMixBagsPerPost;
 
-let totalPailCost = numPails * pailCost;
+// Material costs
+const panelCost = panels * panelPrices[height];
+const gravelCost = gravelBoards * gravelBoardPrice;
+const postsCost = posts * postPrice;
+const postMixCost = postMixBags * postMixBagPrice;
 
-// Post calculation
-let postSpacing = 1.8; // 1 post per 1.8m
-let numPosts = Math.ceil(totalFenceLength / postSpacing) + 1;
-let postCost = 17 * (height / 1.8); // adjusts price for height
-let totalPostCost = numPosts * postCost;
+const materialCost = panelCost + gravelCost + postsCost + postMixCost;
 
-// Postcrete
-let postcreteBags = numPosts * 2;
-let totalPostcreteCost = postcreteBags * 6;
-
-// Gate cost
-let totalGateCost = gateRequired === 'yes' ? 170 : 0;
+// Labour
+const labourCost = length * labourCostPerMeter;
 
 // Total cost
-let totalCost = totalPailCost + totalPostCost + totalPostcreteCost + totalGateCost;
+const totalCost = materialCost + labourCost;
 
-// Display
-document.getElementById('result').innerHTML = `
-<strong>Fence Quote:</strong><br>
-Number of pails: ${numPails}<br>
-Pail cost: £${totalPailCost.toFixed(2)}<br>
-Number of posts: ${numPosts}<br>
-Post cost: £${totalPostCost.toFixed(2)}<br>
-Postcrete cost: £${totalPostcreteCost.toFixed(2)}<br>
-Gate cost: £${totalGateCost.toFixed(2)}<br>
-<strong>Total Cost: £${totalCost.toFixed(2)}</strong>
-`;
+// Selling price with target margin
+const sellingPrice = totalCost / (1 - margin);
+
+// Internal profit
+const profit = sellingPrice - totalCost;
+const profitMargin = (profit / sellingPrice * 100).toFixed(1);
+
+// Display results
+document.getElementById('materialCost').textContent = materialCost.toFixed(2);
+document.getElementById('labourCost').textContent = labourCost.toFixed(2);
+document.getElementById('totalCost').textContent = totalCost.toFixed(2);
+document.getElementById('sellingPrice').textContent = sellingPrice.toFixed(2);
+document.getElementById('profit').textContent = profit.toFixed(2);
+document.getElementById('profitMargin').textContent = profitMargin;
+
+// Show internal profit section
+document.querySelector('#profit').parentElement.classList.remove('hidden');
 }
 </script>
 
 </body>
 </html>
+
