--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -6,52 +6,97 @@
 <title>Closeboard Featheredge Fence Calculator</title>
   <link rel="canonical" href="https://homerepairs4u.com/quote-calculator/fencing.html">
 <style>
-body { font-family: Arial, sans-serif; margin: 20px; }
-label { display: block; margin-top: 10px; }
-input, select { padding: 5px; margin-top: 5px; width: 100px; }
-.result { margin-top: 20px; padding: 10px; border: 1px solid #ccc; }
-.hidden { display: none; }
+body {
+font-family: 'Montserrat', sans-serif;
+background: #f4f7f8;
+display: flex;
+justify-content: center;
+padding: 50px;
+}
+.calculator {
+background: #fff;
+padding: 30px;
+border-radius: 15px;
+box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+max-width: 400px;
+width: 100%;
+}
+h2 {
+color: #2a2f45;
+text-align: center;
+margin-bottom: 20px;
+}
+label {
+display: block;
+margin-top: 15px;
+font-weight: 600;
+}
+input, select {
+width: 100%;
+padding: 10px;
+margin-top: 5px;
+border-radius: 8px;
+border: 1px solid #ccc;
+font-size: 16px;
+}
+.quote-button {
+margin-top: 25px;
+width: 100%;
+background: #ff6b6b;
+color: #fff;
+font-weight: 600;
+padding: 12px;
+border: none;
+border-radius: 10px;
+cursor: pointer;
+font-size: 16px;
+transition: 0.3s;
+}
+.quote-button:hover {
+background: #ff4757;
+}
+.result {
+margin-top: 25px;
+padding: 20px;
+border-radius: 12px;
+background: #f1f8ff;
+text-align: center;
+font-size: 18px;
+font-weight: 600;
+color: #2a2f45;
+}
 </style>
 </head>
 <body>
 
-<h2>Closeboard Featheredge Fence Calculator</h2>
+<div class="calculator">
+<h2>Fence Quote Calculator</h2>
+<label>Fence Length (m):</label>
+<input type="number" id="length" value="10" min="1">
 
-<div>
-<label>Fence Length (m):
-<input type="number" id="length" value="10" min="0">
-</label>
-
-<label>Height:
+<label>Height:</label>
 <select id="height">
 <option value="4">4ft</option>
 <option value="5">5ft</option>
 <option value="6">6ft</option>
 </select>
-</label>
 
-<label>Target Gross Margin (%):
-<input type="number" id="margin" value="30" min="0" max="100">
-</label>
+<label>Gate:</label>
+<select id="gate">
+<option value="0">No</option>
+<option value="1">Yes</option>
+</select>
 
-<button onclick="calculateFence()">Calculate</button>
-</div>
+<button class="quote-button" onclick="calculateQuote()">Get Quote</button>
 
-<div class="result">
-<h3>Quote</h3>
-<p>Total Materials Cost: £<span id="materialCost">0</span></p>
-<p>Labour Cost: £<span id="labourCost">0</span></p>
-<p>Total Cost: £<span id="totalCost">0</span></p>
-<p>Selling Price: £<span id="sellingPrice">0</span></p>
-<p class="hidden">Internal Profit: £<span id="profit">0</span></p>
-<p class="hidden">Profit Margin: <span id="profitMargin">0</span>%</p>
+<div class="result" id="quoteResult">Your quote will appear here</div>
 </div>
 
 <script>
-function calculateFence() {
+function calculateQuote() {
 const length = parseFloat(document.getElementById('length').value);
 const height = document.getElementById('height').value;
-const margin = parseFloat(document.getElementById('margin').value) / 100;
+const gate = parseInt(document.getElementById('gate').value);
 
 // Constants
 const panelWidth = 1.8;
@@ -61,17 +106,12 @@ const postPrice = 17;
 const postMixBagPrice = 6;
 const postMixBagsPerPost = 2;
 const labourCostPerMeter = 50;
+const gatePrice = 0; // Included
 
-// Calculate panels
+// Calculate panels, posts, gravel boards, post mix
 const panels = Math.ceil(length / panelWidth);
-
-// Calculate posts
 const posts = panels + 1;
-
-// Gravel boards
 const gravelBoards = panels;
-
-// Post mix
 const postMixBags = posts * postMixBagsPerPost;
 
 // Material costs
@@ -79,35 +119,21 @@ const panelCost = panels * panelPrices[height];
 const gravelCost = gravelBoards * gravelBoardPrice;
 const postsCost = posts * postPrice;
 const postMixCost = postMixBags * postMixBagPrice;
+const gateCost = gate * gatePrice;
 
-const materialCost = panelCost + gravelCost + postsCost + postMixCost;
+const materialCost = panelCost + gravelCost + postsCost + postMixCost + gateCost;
 
 // Labour
 const labourCost = length * labourCostPerMeter;
 
-// Total cost
+// Total job cost
 const totalCost = materialCost + labourCost;
 
-// Selling price with target margin
-const sellingPrice = totalCost / (1 - margin);
-
-// Internal profit
-const profit = sellingPrice - totalCost;
-const profitMargin = (profit / sellingPrice * 100).toFixed(1);
-
-// Display results
-document.getElementById('materialCost').textContent = materialCost.toFixed(2);
-document.getElementById('labourCost').textContent = labourCost.toFixed(2);
-document.getElementById('totalCost').textContent = totalCost.toFixed(2);
-document.getElementById('sellingPrice').textContent = sellingPrice.toFixed(2);
-document.getElementById('profit').textContent = profit.toFixed(2);
-document.getElementById('profitMargin').textContent = profitMargin;
-
-// Show internal profit section
-document.querySelector('#profit').parentElement.classList.remove('hidden');
+// Display quote to customer
+document.getElementById('quoteResult').textContent =
+`Your estimated quote is £${totalCost.toFixed(2)}`;
 }
 </script>
 
 </body>
 </html>
-
