--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -124,6 +124,48 @@ margin: 5% auto;
 max-width: 80%;
 border-radius: 10px;
 }
+  @media (max-width: 768px) {
+
+body {
+padding: 15px;
+}
+
+h1 {
+font-size: 24px;
+}
+
+.calc-title {
+flex-direction: column;
+align-items: flex-start;
+gap: 8px;
+}
+
+.calc-button,
+.quote-button,
+.close-button,
+.view-image-button {
+width: 100%;
+}
+
+input, select {
+font-size: 16px;
+}
+
+.result {
+font-size: 15px;
+}
+
+.close-modal {
+top: 15px;
+right: 20px;
+font-size: 32px;
+}
+
+.image-modal .modal-content {
+max-width: 95%;
+}
+
+}
 </style>
 </head>
 
