--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Simply call us on 07735 873694 at a time convenient to you.</p>
 <button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
 <img id="lightboxImg" src="" alt="">
 </div>
-
+<a href="https://homerepairs4u.com/quote-calculator/fencing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
 
 </main>
 
