--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -187,7 +187,14 @@ const fenceNames = [
 "Tongue & Groove Fence",
 "Lapped Panel Fence"
 ];
-
+const fenceImages = [
+"images/closeboard.jpg",
+"images/double-hit-miss.webp",
+"images/hitandmiss.jpg",
+"images/postandrail.jpg",
+"images/tonguegroove.jpg",
+"images/lappedpanel.jpg"
+];
 const container = document.getElementById("calculators");
 
 // Build calculators dynamically
