--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fence Quote Hub</title>
-
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/guttering.html">
 <style>
 body {
 font-family: 'Montserrat', sans-serif;
