--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -31,14 +31,36 @@ grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 gap: 30px;
 }
 
+/* Card styling with background image */
 .calc-container {
-background: #fff;
+position: relative;
 border-radius: 12px;
-padding: 20px;
-box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-min-height: 350px; /* prevents wobble on mobile when collapsing */
+min-height: 350px;
 display: flex;
 flex-direction: column;
+justify-content: flex-end;
+color: #fff;
+padding: 20px;
+box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+background-size: cover;
+background-position: center;
+overflow: hidden;
+}
+
+/* Overlay for readability */
+.calc-container::before {
+content: '';
+position: absolute;
+top: 0; left: 0;
+width: 100%; height: 100%;
+background: rgba(0,0,0,0.4);
+border-radius: 12px;
+z-index: 0;
+}
+
+.calc-container > * {
+position: relative;
+z-index: 1;
 }
 
 .calc-title {
@@ -47,7 +69,7 @@ justify-content: space-between;
 align-items: center;
 font-weight: 600;
 font-size: 18px;
-flex-wrap: wrap; /* allows button to wrap on mobile */
+flex-wrap: wrap;
 }
 
 .view-image-button, .calc-button, .quote-button, .close-button {
@@ -81,6 +103,7 @@ padding: 20px;
 border-radius: 12px;
 background: #fff;
 box-sizing: border-box;
+color: #2a2f45;
 }
 
 label {
@@ -144,7 +167,7 @@ background: rgba(0,0,0,0.8);
 display: block;
 margin: 5% auto;
 max-width: 80%;
-max-height: 300px; /* prevents mobile wobble */
+max-height: 300px;
 border-radius: 10px;
 }
 
@@ -167,7 +190,7 @@ input, select { font-size: 16px; }
 <div class="calculators-grid" id="calculators"></div>
 
 <script>
-// Fence types and example images
+// Fence types and images
 const fences = [
 { name: "Closeboard Featheredge Fence", img: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" },
 { name: "Palisade Fence", img: "https://images.unsplash.com/photo-1591148048600-38ef12fa25b0?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" },
@@ -182,7 +205,7 @@ const container = document.getElementById("calculators");
 fences.forEach((fence, i) => {
 const id = i + 1;
 container.innerHTML += `
-<div class="calc-container">
+<div class="calc-container" style="background-image: url('${fence.img}')">
 <div class="calc-title">
 ${fence.name}
 <button class="view-image-button" onclick="openImage('img${id}')">View Image</button>
