--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -192,7 +192,7 @@ input, select { font-size: 16px; }
 <script>
 // Fence types and images
 const fences = [
-{ name: "Closeboard Featheredge Fence", img: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" },
+{ name: "Closeboard Featheredge Fence", img: "/images/closeboard.webp" },
 { name: "Palisade Fence", img: "/images/double-hit-miss.webp" },
 { name: "Hit & Miss Fence", img: "https://images.unsplash.com/photo-1565372912597-4e1b3e0c45d6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" },
 { name: "Post & Rail Fence", img: "https://images.unsplash.com/photo-1617645259717-8d4a77fc29f2?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" },
