--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -194,10 +194,10 @@ input, select { font-size: 16px; }
 const fences = [
 { name: "Closeboard Featheredge Fence", img: "/images/closeboard.webp" },
 { name: "Double Side Hit Miss", img: "/images/double-hit-miss.webp" },
-{ name: "Single Side Hit Miss", img: "https://images.unsplash.com/photo-1565372912597-4e1b3e0c45d6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" },
-{ name: "Post & Rail Fence", img: "https://images.unsplash.com/photo-1617645259717-8d4a77fc29f2?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" },
-{ name: "Tongue & Groove Fence", img: "https://images.unsplash.com/photo-1600585154302-7114b128cb16?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" },
-{ name: "Lapped Panel Fence", img: "https://images.unsplash.com/photo-1597164224393-d6b21969d7f0?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&h=400&q=80" }
+{ name: "Single Side Hit Miss", img: "/images/concave.webp" },
+{ name: "Post & Rail Fence", img: "venetian.webp" },
+{ name: "Tongue & Groove Fence", img: "/images/urban-hedge.webp" },
+{ name: "Lapped Panel Fence", img: "" }
 ];
 
 const container = document.getElementById("calculators");
