--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -195,9 +195,9 @@ const fences = [
 { name: "Closeboard Featheredge Fence", img: "/images/closeboard.webp" },
 { name: "Double Side Hit Miss", img: "/images/double-hit-miss.webp" },
 { name: "Single Side Hit Miss", img: "/images/concave.webp" },
-{ name: "Post & Rail Fence", img: "venetian.webp" },
+{ name: "Post & Rail Fence", img: "/images/venetian.webp" },
 { name: "Tongue & Groove Fence", img: "/images/urban-hedge.webp" },
-{ name: "Lapped Panel Fence", img: "" }
+{ name: "Lapped Panel Fence", img: "/images/hit-miss" }
 ];
 
 const container = document.getElementById("calculators");
