--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -197,7 +197,7 @@ const fences = [
 { name: "Single Side Hit Miss", img: "/images/concave.webp" },
 { name: "Post & Rail Fence", img: "/images/venetian.webp" },
 { name: "Tongue & Groove Fence", img: "/images/urban-hedge.webp" },
-{ name: "Lapped Panel Fence", img: "/images/hit-miss" }
+{ name: "Lapped Panel Fence", img: "/images/hit-miss.webp" }
 ];
 
 const container = document.getElementById("calculators");
