--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -194,10 +194,10 @@ input, select { font-size: 16px; }
 const fences = [
 { name: "Closeboard Featheredge Fence", img: "/images/closeboard.webp" },
 { name: "Double Side Hit Miss", img: "/images/double-hit-miss.webp" },
-{ name: "Single Side Hit Miss", img: "/images/concave.webp" },
-{ name: "Post & Rail Fence", img: "/images/venetian.webp" },
-{ name: "Tongue & Groove Fence", img: "/images/urban-hedge.webp" },
-{ name: "Lapped Panel Fence", img: "/images/hit-miss.webp" }
+{ name: "Double Side Concave", img: "/images/concave.webp" },
+{ name: "Venetian", img: "/images/venetian.webp" },
+{ name: "Urban Hedge", img: "/images/urban-hedge.webp" },
+{ name: "Single Hit Miss", img: "/images/hit-miss.webp" }
 ];
 
 const container = document.getElementById("calculators");
